--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "autoprefixer-loader": "^3.2.0",
     "css-loader": "^0.25.0",
+    "hoek": "^5.0.3",
     "json-loader": "^0.5.7",
     "node-sass": "^3.10.0",
     "prop-types": "^15.6.0",
